# UF_IPMC

./: .gitlab-ci.yml  CMakeLists.txt  ipmc.service
CONFIG/: CONFIG.toml
SDR_OCTOPUS_QSFPDD/: SDR10.toml  SDR4.toml  SDR5.toml  SDR7.toml  SDR8.toml  SDR9.toml
SDR_OCTOPUS_QSFPDD_INIT/: SDR5.toml  SDR6.toml  SDR7.toml
SDR_VU13P_QSFP/: SDR4.toml
SDR_VU13P_QSFP30/: SDR4.toml  SDR5.toml  SDR6.toml  SDR7.toml  SDR8.toml
SRC/: CMakeLists.txt  event.c  i2c-sensor.c  i2c-sensor.h  i2c.c  i2c.h  ipmc.c  ipmc.h  ipmi.h  main.c  octopus.h  picmg.c  semaphore.c  semaphore.h  sensor.c  sensor.h  timer.c  toml.h  user-payload-octopus-qsfpdd.c  user-payload-vu13p-qsfp.c  user-payload-vu13p-qsfp30.c  user-sensor-octopus-qsfpdd.c  user-sensor-vu13p-qsfp.c  user-sensor-vu13p-qsfp.h  user-sensor-vu13p-qsfp30.c  user-sensor-vu13p-qsfp30.h  ws.c
